--- a/ReCars/index.html
+++ b/ReCars/index.html
@@ -27,6 +27,27 @@
     <div class="well well-sm" id="CarTable"></div>
 
 
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Edit Car</h4>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="colorModal" placeholder="Select a color" />
+                    <input type="text" id="makeModal" placeholder="Select the make" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="myApp.saveEdit()">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <script src="CarsJS.js"></script>
